--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Yinong Zhou's Research Group # the website title (if blank, full name will be used instead)
+title: Yinong Zhou # the website title (if blank, full name will be used instead)
 first_name: Yinong
 middle_name: 
 last_name: Zhou
